--- a/example/example-zookeeper/pom.xml
+++ b/example/example-zookeeper/pom.xml
@@ -28,5 +28,14 @@
             <artifactId>dynamic-tp-spring-boot-starter-zookeeper</artifactId>
             <version>${dtp.version}</version>
         </dependency>
+        <dependency>
+            <groupId>cn.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-adapter-webserver</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
     </dependencies>
 </project>
